fix: fix dark mode UI for chat window

--- a/web/src/App.less
+++ b/web/src/App.less
@@ -168,6 +168,11 @@ img {
   width: 100%;
 }
 
+[data-theme="dark"] .remote-desktop,
+.dark .remote-desktop {
+  background-color: #1a1225;
+}
+
 .djs-container.djs-parent svg {
   height: 100% !important;
 }
